# med_deepresearch

./: .env.example  .gitignore  DIAGNOSIS_RELEVANT_SEARCH_SETUP.md  case_19172.md  dockerfile  examine_csv.py  examine_specific_cases.py  final_analysis.py  final_results.py  main.py  medd_incorrect_cases.csv  medd_selected_50.csv  openai_review.py  page.html  pyproject.toml  qdrant_vector_embedding.py  run_diagnosis.sh  search_cases.py  search_placental_cases.py  temp.txt  test_max_turns_synthesis.py  test_turn_counter.py
src/: CLAUDE.md  README_RELATED_CASES.md  benchmark.py  build_local_image_index_csv.py  med_search.py  med_search_vector.py  med_vector_search.py  ollama_run.py  query_related_cases.py  related_cases_output.csv
src/agent/: CLAUDE.md  agent_config.yaml  benchmark.py  benchmark_results_20260118_210349.json  benchmark_results_20260119_212444.json  single_agent.py
src/agent_v2/: CLAUDE.md  README.md  __init__.py  __main__.py  agent.py  agent_config.yaml  config.py  download_images.py  final_result_protocol.md  image_loader.py  prompts.py  session.py  skill_loader.py
src/gpt52_verification/: analysis_first_level.md  analyze_results.py  external_llm_reviews.txt  external_llm_reviews_v1.txt  make_filtered_relevant_csv.py
src/logs/: benchmark_1.json  benchmark_2.json  benchmark_3.json  benchmark_4.json  benchmark_5.json
src/sessions/: session_20260131_162248_5648ca88.json  session_20260131_162401_d5e74465.json  session_20260131_162458_06e38847.json  session_20260131_162609_177bbe44.json  session_20260131_162716_f52a7fa2.json
(+78 files in other folders)
